default/objects/Opportunity/fields/Credit_check_date__c.field-meta.xml
<CustomField>
    <fullName>Credit_check_date__c</fullName>
    <label>Credit check date</label>
    <type>Date</type>
</CustomField>