default/objects/Opportunity/fields/Credit_days_ppr__c.field-meta.xml
<CustomField>
    <fullName>Credit_days_ppr__c</fullName>
    <label>Credit days ppr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Предоплата</fullName>
            </value>
            <value>
                <fullName>к7д</fullName>
            </value>
            <value>
                <fullName>к14д</fullName>
            </value>
            <value>
                <fullName>к30д</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>