default/objects/Opportunity/fields/Credit_desicion_ppr__c.field-meta.xml
<CustomField>
    <fullName>Credit_desicion_ppr__c</fullName>
    <label>Credit desicion ppr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ДА</fullName>
            </value>
            <value>
                <fullName>НЕТ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>