default/objects/Opportunity/fields/Credit_Factory_Errors__c.field-meta.xml
<CustomField>
    <fullName>Credit_Factory_Errors__c</fullName>
    <label>Credit Factory Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>