default/objects/Opportunity/fields/Credit_Factory_PDF_Report_Created__c.field-meta.xml
<CustomField>
    <fullName>Credit_Factory_PDF_Report_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Factory PDF Report Created</label>
    <type>Checkbox</type>
</CustomField>