default/objects/Opportunity/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <formula>ROUND(MAX((IF(CF_Credit_Limit__c != 0, CF_Credit_Limit__c, (Auftragsvolumen__c * ( ( Zahlungsziel_Credit_calculati__c + Rechnungsperiode_3__c ) / 30)* (1+Buffer_2__c))) + Credit_Limit_Anpassung__c), IF(ISPICKVAL(Account.BillingCountryCode, 'HU'), 10000, 100))/IF(ISPICKVAL(Account.BillingCountryCode, 'HU'), 10000, 100), 0)*IF(ISPICKVAL(Account.BillingCountryCode, 'HU'), 10000, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wird automatisch errechnet!</inlineHelpText>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>