default/objects/Opportunity/fields/Credit_Limit_Anpassung__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Anpassung__c</fullName>
    <label>Credit Limit Anpassung</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>