default/objects/Opportunity/fields/Credit_Limit_Calcul__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Calcul__c</fullName>
    <formula>Auftragsvolumen__c * ( ( VALUE(TEXT(Zahlungsziel_2__c)) + VALUE(TEXT(Rechnungsperiode_2__c)) ) / 30)*(1+ Buffer_2__c ) + Credit_Limit_Anpassung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit (Calcul)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>