default/objects/Opportunity/fields/Credit_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Id__c</fullName>
    <label>Credit Report Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>