default/objects/Opportunity/fields/Credit_Report_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Request_Date__c</fullName>
    <label>Credit Report Request Date</label>
    <type>Date</type>
</CustomField>