default/objects/Opportunity/fields/Credit_Stage__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stage__c</fullName>
    <label>Credit Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Credit Report</fullName>
            </value>
            <value>
                <fullName>Pending Sales – Deposit</fullName>
            </value>
            <value>
                <fullName>Pending Sales – Information</fullName>
            </value>
            <value>
                <fullName>CreditCheck</fullName>
            </value>
            <value>
                <fullName>Pending Credit - Contract Check</fullName>
            </value>
            <value>
                <fullName>Credit Check - Pending Credit</fullName>
            </value>
            <value>
                <fullName>CreditCheck rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>