default/objects/Opportunity/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <label>CCS_Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conditional Approval</fullName>
            </value>
            <value>
                <fullName>Credit Approved</fullName>
            </value>
            <value>
                <fullName>Credit Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>