default/objects/Opportunity/fields/Credit_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Credit_System_Id__c</fullName>
    <label>Credit System Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>