default/objects/Opportunity/fields/Credit_System_Recommended_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_System_Recommended_Limit__c</fullName>
    <label>Credit System Recommended Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>