default/objects/Opportunity/fields/Creditreform_Recommended_Rating__c.field-meta.xml
<CustomField>
    <fullName>Creditreform_Recommended_Rating__c</fullName>
    <label>Agency recommended CL</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>