default/objects/Opportunity/fields/Crefo_Report_Created__c.field-meta.xml
<CustomField>
    <fullName>Crefo_Report_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when PDF report from Credit Factory attached to Opportunity</description>
    <label>Crefo Report Created</label>
    <type>Checkbox</type>
</CustomField>