default/objects/Opportunity/fields/CREFONR__c.field-meta.xml
<CustomField>
    <fullName>CREFONR__c</fullName>
    <formula>Account.CREFONR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CREFONR</label>
    <type>Text</type>
</CustomField>