default/objects/Opportunity/fields/Custom_Distribution_Info__c.field-meta.xml
<CustomField>
    <fullName>Custom_Distribution_Info__c</fullName>
    <label>Custom Distribution Info</label>
    <length>250</length>
    <type>Text</type>
</CustomField>