default/objects/Opportunity/fields/Custom_Distribution_Team__c.field-meta.xml
<CustomField>
    <fullName>Custom_Distribution_Team__c</fullName>
    <label>Custom_Distribution_Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>