default/objects/Opportunity/fields/Custom_PIN__c.field-meta.xml
<CustomField>
    <fullName>Custom_PIN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this check box if a Customer wants to have a custom PIN. Such Customers should order their Cards themselves in Self Serve portal.</inlineHelpText>
    <label>Custom PIN</label>
    <type>Checkbox</type>
</CustomField>