default/objects/Opportunity/fields/Customer_details_sent_to_ATS__c.field-meta.xml
<CustomField>
    <fullName>Customer_details_sent_to_ATS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer details sent to ATS</label>
    <type>Checkbox</type>
</CustomField>