default/objects/Opportunity/fields/Customer_pumped__c.field-meta.xml
<CustomField>
    <fullName>Customer_pumped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer pumped</label>
    <type>Checkbox</type>
</CustomField>