default/objects/Opportunity/fields/Customer_s_Search_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Search_Request__c</fullName>
    <description>unambiguously to specify by what request the client came to us</description>
    <formula>Account.Customer_s_Search_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer's Search Request</label>
    <type>Text</type>
</CustomField>