default/objects/Opportunity/fields/Data_Protection_Act_1998__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Act_1998__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Podane przez Ciebie informacje mogą zostać ujawnione licencjonowanej agencji informacji kredytowej, która zachowa wyniki wyszukiwania.</inlineHelpText>
    <label>Data Protection Act 1998</label>
    <type>Checkbox</type>
</CustomField>