default/objects/Opportunity/fields/Datansatztyp_auto__c.field-meta.xml
<CustomField>
    <fullName>Datansatztyp_auto__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datansatztyp_auto</label>
    <type>Text</type>
</CustomField>