default/objects/Opportunity/fields/Date_Assign_on_CC__c.field-meta.xml
<CustomField>
    <fullName>Date_Assign_on_CC__c</fullName>
    <description>use for pilots CC</description>
    <label>Date Assign on CC</label>
    <type>DateTime</type>
</CustomField>