default/objects/Opportunity/fields/Date_creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_creation_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date creation Time</label>
    <type>DateTime</type>
</CustomField>