default/objects/Opportunity/fields/Date_first_card_transaction__c.field-meta.xml
<CustomField>
    <fullName>Date_first_card_transaction__c</fullName>
    <description>Copy a value from Account, field Date first card transaction</description>
    <formula>Account.First_Pump_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date first card transaction</label>
    <type>Date</type>
</CustomField>