default/objects/Opportunity/fields/Date_For_Agree_To_Deposit_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Date_For_Agree_To_Deposit_Agreement__c</fullName>
    <label>Date For Agree To Deposit Agreement</label>
    <type>DateTime</type>
</CustomField>