default/objects/Opportunity/fields/Date_for_Agree_to_Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Agree_to_Privacy_Policy__c</fullName>
    <label>Date for Agree to Privacy Policy</label>
    <type>DateTime</type>
</CustomField>