default/objects/Opportunity/fields/Date_of_Acceptance_VAT_Recovery_TC__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Acceptance_VAT_Recovery_TC__c</fullName>
    <label>Date of Acceptance VAT-Recovery T&amp;C</label>
    <type>DateTime</type>
</CustomField>