default/objects/Opportunity/fields/Date_of_First_Contact_Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Contact_Inbound_Outbound__c</fullName>
    <label>Date of First Contact: Inbound/Outbound</label>
    <type>Date</type>
</CustomField>