default/objects/Opportunity/fields/Date_of_last_change_of_stage__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_change_of_stage__c</fullName>
    <description>Дата последнего изменения этапа</description>
    <label>Date of last change of stage</label>
    <type>Date</type>
</CustomField>