default/objects/Opportunity/fields/Date_of_Update_PPR__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Update_PPR__c</fullName>
    <label>Date of Update PPR</label>
    <type>Date</type>
</CustomField>