default/objects/Opportunity/fields/Date_transfer_Acc__c.field-meta.xml
<CustomField>
    <fullName>Date_transfer_Acc__c</fullName>
    <description>если id_user_Acc = id_user_Opp, то дата перевода Организации, в противном случ дата перевода Возможности.</description>
    <formula>IF(Owner_Opp__c =  Account.Owner_User_Id__c  , Account.Date_Change_Owner__c ,Day_transfer_Opp__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date transfer Acc</label>
    <type>Date</type>
</CustomField>