default/objects/Opportunity/fields/Date_transfer_true_owner__c.field-meta.xml
<CustomField>
    <fullName>Date_transfer_true_owner__c</fullName>
    <description>Для маркировки воронки сэйлза переведенного в другую группу продаж</description>
    <label>Date transfer true owner</label>
    <type>Date</type>
</CustomField>