default/objects/Opportunity/fields/Day_transfer__c.field-meta.xml
<CustomField>
    <fullName>Day_transfer__c</fullName>
    <formula>DATEVALUE(Last_Owner_Change_Date_RUS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Дата перевода</label>
    <type>Date</type>
</CustomField>