default/objects/Opportunity/fields/Day_transfer_Opp__c.field-meta.xml
<CustomField>
    <fullName>Day_transfer_Opp__c</fullName>
    <description>Перевод в возможности, авто обнов поля</description>
    <label>Day transfer Opp</label>
    <type>Date</type>
</CustomField>