default/objects/Opportunity/fields/Days_after_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Days_after_Closed_Won__c</fullName>
    <description>Days after Close Date</description>
    <formula>TODAY() - CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days after Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>