default/objects/Opportunity/fields/DD_Interested__c.field-meta.xml
<CustomField>
    <fullName>DD_Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DD Interested</label>
    <type>Checkbox</type>
</CustomField>