default/objects/Opportunity/fields/Decision_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason_Other__c</fullName>
    <description>What other decsion reasons are we hearing for wins and losses?</description>
    <inlineHelpText>What "other" decsion reasons are we hearing from prospects?</inlineHelpText>
    <label>Decision Reason - Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>