default/objects/Opportunity/fields/Decision_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reasons__c</fullName>
    <label>CCS_Decision Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Inkaso</fullName>
            </value>
            <value>
                <fullName>Nedostatečná síť</fullName>
            </value>
            <value>
                <fullName>Nemají finance</fullName>
            </value>
            <value>
                <fullName>Nevyužívají vlastnosti produktu</fullName>
            </value>
            <value>
                <fullName>Platba v hotovosti</fullName>
            </value>
            <value>
                <fullName>Poplatky</fullName>
            </value>
            <value>
                <fullName>Prodej T-Mobile</fullName>
            </value>
            <value>
                <fullName>Sleva u stávajícího dodavatele</fullName>
            </value>
            <value>
                <fullName>Splatnost</fullName>
            </value>
            <value>
                <fullName>Záruka</fullName>
            </value>
            <value>
                <fullName>Auta jako benefit</fullName>
            </value>
            <value>
                <fullName>objednávka Limit+</fullName>
            </value>
            <value>
                <fullName>objednávka Limit+ MINI</fullName>
            </value>
            <value>
                <fullName>objednávka Moje síť</fullName>
            </value>
            <value>
                <fullName>objednávka FIX 97</fullName>
            </value>
            <value>
                <fullName>objednávka Eso 2015</fullName>
            </value>
            <value>
                <fullName>Má asistenci_pojištění a další benefity jinde</fullName>
            </value>
            <value>
                <fullName>Nízký limit</fullName>
            </value>
            <value>
                <fullName>Nelíbí se mu poplatek</fullName>
            </value>
            <value>
                <fullName>Nepotřebuje_nevyužije</fullName>
            </value>
            <value>
                <fullName>Nemají vozový park</fullName>
            </value>
            <value>
                <fullName>Je klient CCS</fullName>
            </value>
            <value>
                <fullName>Špatná zkušenost s CCS</fullName>
            </value>
            <value>
                <fullName>Nechce sdělit důvod</fullName>
            </value>
            <value>
                <fullName>Ukončená činnost</fullName>
            </value>
            <value>
                <fullName>Platba paušálem</fullName>
            </value>
            <value>
                <fullName>Odeslán e-mail - ozve se sám</fullName>
            </value>
            <value>
                <fullName>Konkurence</fullName>
            </value>
            <value>
                <fullName>Jiný důvod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>