default/objects/Opportunity/fields/Deduplication_domain_check__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_domain_check__c</fullName>
    <label>Deduplication domain check</label>
    <length>80</length>
    <type>Text</type>
</CustomField>