default/objects/Opportunity/fields/Deduplication_email_check__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_email_check__c</fullName>
    <label>Deduplication email check</label>
    <length>80</length>
    <type>Text</type>
</CustomField>