default/objects/Opportunity/fields/Deduplication_inn_check__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_inn_check__c</fullName>
    <label>Deduplication inn check</label>
    <length>80</length>
    <type>Text</type>
</CustomField>