default/objects/Opportunity/fields/Deduplication_result__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_result__c</fullName>
    <label>Deduplication result</label>
    <length>80</length>
    <type>Text</type>
</CustomField>