default/objects/Opportunity/fields/Delinquency_0_5__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_0_5__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(CategoryContract__c,"МО"), ISPICKVAL(CategoryContract__c,"У")),
ISPICKVAL( StageName ,"Check Credit History"),Duration_work_Opp__c &gt;= 7),1,
IF(AND(ISPICKVAL(CategoryContract__c,"О"),
ISPICKVAL( StageName ,"Check Credit History"),Duration_work_Opp__c &gt;= 12),1,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delinquency 0 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>