default/objects/Opportunity/fields/Delinquency_0_6__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_0_6__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(CategoryContract__c,"МО"), ISPICKVAL(CategoryContract__c,"У")),
ISPICKVAL( StageName ,"Agreement Terms and Conditions"),Duration_work_Opp__c &gt;=
6),1,
IF(AND(ISPICKVAL(CategoryContract__c,"О"),
ISPICKVAL( StageName ,"Agreement Terms and Conditions"),Duration_work_Opp__c &gt;= 8),1,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delinquency 0 6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>