default/objects/Opportunity/fields/Delinquency_KP__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_KP__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(CategoryContract__c,"МО"), ISPICKVAL(CategoryContract__c,"У")),
ISPICKVAL( StageName ,"Client Negotiations"),Duration_work_Opp__c &gt;= 4),1,
IF(AND(ISPICKVAL(CategoryContract__c,"О"),
ISPICKVAL( StageName ,"Client Negotiations"),Duration_work_Opp__c &gt;= 5),1,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delinquency KP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>