default/objects/Opportunity/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ticking this confirmation box will move Opportunity to the Closed Won status.</inlineHelpText>
    <label>Payment received - confirmation</label>
    <type>Checkbox</type>
</CustomField>