default/objects/Opportunity/fields/Deposit_amount_auto__c.field-meta.xml
<CustomField>
    <fullName>Deposit_amount_auto__c</fullName>
    <formula>IF(AND(ISPICKVAL(Rechnungsperiode__c, "15"), ISPICKVAL(Zahlungsziel_Credit__c, "10")), Bi_weekly_10__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit amount (auto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>