default/objects/Opportunity/fields/Deposit_reason__c.field-meta.xml
<CustomField>
    <fullName>Deposit_reason__c</fullName>
    <description>The reason of the deposit</description>
    <label>Deposit reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low Recommended CL</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 4 &amp; 30+7)</fullName>
            </value>
            <value>
                <fullName>New business</fullName>
            </value>
            <value>
                <fullName>Invalid contact</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 5)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 6)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 0)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 1)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 2)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 3)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 4)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 99)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (no rating)</fullName>
            </value>
            <value>
                <fullName>Obligation overdue</fullName>
            </value>
            <value>
                <fullName>Low/no profitability</fullName>
            </value>
            <value>
                <fullName>Payment details are 15+7</fullName>
            </value>
            <value>
                <fullName>Payment details are 30+7</fullName>
            </value>
            <value>
                <fullName>Sole trader</fullName>
            </value>
            <value>
                <fullName>Address/Director/Name change 6M</fullName>
            </value>
            <value>
                <fullName>Cribis negative information</fullName>
            </value>
            <value>
                <fullName>Missing financials</fullName>
            </value>
            <value>
                <fullName>Executions</fullName>
            </value>
            <value>
                <fullName>Negative policy rule</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment delays</fullName>
            </value>
            <value>
                <fullName>Poor Financials</fullName>
            </value>
            <value>
                <fullName>No financials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>