default/objects/Opportunity/fields/Deposit_received_confirmed_by__c.field-meta.xml
<CustomField>
    <fullName>Deposit_received_confirmed_by__c</fullName>
    <label>Payment received - confirmed by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>