default/objects/Opportunity/fields/Deposit_received_confirmed_when__c.field-meta.xml
<CustomField>
    <fullName>Deposit_received_confirmed_when__c</fullName>
    <label>Payment received - confirmed when</label>
    <type>DateTime</type>
</CustomField>