default/objects/Opportunity/fields/Details_of_REGON_CEIDG_or_KRS__c.field-meta.xml
<CustomField>
    <fullName>Details_of_REGON_CEIDG_or_KRS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Details of REGON, CEIDG or KRS</label>
    <type>Checkbox</type>
</CustomField>