default/objects/Opportunity/fields/Diesel_consumption_l_month__c.field-meta.xml
<CustomField>
    <fullName>Diesel_consumption_l_month__c</fullName>
    <label>Diesel consumption (l/month)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>