default/objects/Opportunity/fields/Disable_for_KPI__c.field-meta.xml
<CustomField>
    <fullName>Disable_for_KPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable for KPI</label>
    <type>Checkbox</type>
</CustomField>